--- a/src/pages_css/home_web.css
+++ b/src/pages_css/home_web.css
@@ -137,6 +137,8 @@ body {
 
 .event-list h1 {
   margin-bottom: 20px;
+  font-size: 32px;
+  font-weight: 700;
 }
 
 .event-img {
@@ -160,4 +162,14 @@ body {
 p {
   margin-left: 30px;
   padding: 3px;
+}
+
+.event-details h3 {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.event-details p {
+  font-size: 17px;
+  font-weight: 400;
 }
