--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap");
 .App {
   text-align: center;
+  /* background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh; */
 }
 
 .App-logo {
