--- a/src/pages_css/home_web.css
+++ b/src/pages_css/home_web.css
@@ -120,7 +120,7 @@ body {
 /* event details  */
 
 .event-list {
-  height: 50vh;
+  height: fit-content;
   width: 100%;
   border-radius: 14px;
   border: 1px solid #d4d4d4;
@@ -130,46 +130,74 @@ body {
 
 }
 
-.event-list-parts {
+.event-flexbox {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
-.event-list h1 {
-  margin-bottom: 20px;
+.event-list-parts {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+
+}
+
+.event-list-head {
   font-size: 32px;
   font-weight: 700;
 }
 
-.event-img {
-  width: 100px;
-  height: 100px;
-  border-radius: 8px;
+.data-class {
+  /* height: 410px; */
+  height: fit-content;
+  width: 250px;
+  border: 2px solid #d4d4d4;
+  border-radius: 33px;
+  padding: 10px;
+  width: calc(25% - 50px);
+  margin: 10px;
+  margin-top: 18px;
+}
+
+.data-img-main {
+  width: 100%;
+  height: 300px;
   overflow: hidden;
 }
 
-.event-img img {
+.data-image {
   width: 100%;
-  /* height: 100%; */
-  object-fit: fill;
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 23px;
 }
 
-.event-name {
+.data-display {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center
 }
 
-.event-name h3,
-p {
-  margin-left: 30px;
+.data-head {
+  font-size: 22px;
+  padding: 8px;
+  padding-bottom: 1px;
+}
+
+.data-para {
+  font-size: 15px;
+  padding: 2px;
+}
+
+.para-small {
+  font-size: 14px;
   padding: 3px;
+  text-align: center;
 }
 
-.event-details h3 {
-  font-size: 20px;
-  font-weight: 600;
-}
-
-.event-details p {
-  font-size: 17px;
-  font-weight: 400;
+.para-small-bold {
+  font-weight: 500;
 }
