--- a/src/pages_css/explore.css
+++ b/src/pages_css/explore.css
@@ -60,6 +60,7 @@ body {
     border-radius: 33px;
     padding: 10px;
     width: calc(25% - 80px);
+    width: calc(25% - 0px);
     margin: 10px;
     margin-top: 18px;
 }
